# instapy

./: README.md  profile-report.md  pyproject.toml  setup.py  timing-report.txt
